--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Wavescation — Holiday Homes & Luxury Coastal Stays in Dubai</title>
+    <title>Alekn Alraqy</title>
 
     <!-- ✅ SEO Essentials -->
     <meta name="description" content="Discover luxury beachfront villas, ocean-view apartments, and coastal stays in Dubai with Wavescation. Book your dream seaside vacation today!">
