--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="canonical" href="https://www.wavescation.com/" />
 
     <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" href="https://www.wavescation.com/assets/logo-DC0iQ2p5.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
 
     <!-- ✅ Open Graph -->
     <meta property="og:type" content="website" />
